--- a/static/css/style.css
+++ b/static/css/style.css
@@ -286,7 +286,7 @@ body h4,h5,h6 {
 /* Book a Class */
 .section-booking {
 	position: relative;
-	height: 100vh;
+	height: 70vh;
 }
 
 .section-booking .section-center {
@@ -307,33 +307,6 @@ body h4,h5,h6 {
 }
 
 #booking::before {
-	content: '';
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-    background: rgba(255, 255, 255, 0.7)
-}
-
-.section-booking-type {
-	position: relative;
-	height: 70vh;
-}
-
-.booking-type {
-    font-family: 'Montserrat', sans-serif;
-    background-image: url("../images/bg-1.png");
-	background-color: #d3b488;
-	background-size: cover;
-    background-position: center;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 5px;
-    padding: 120px;
-}
-
-.booking-type::before {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -923,6 +896,10 @@ h2 {
         font-size: 19px;
     }
 
+    .section-booking {
+        height: 60vh;
+    }
+
 }
 
 /* for small screens size from 575px wide and down */
@@ -951,6 +928,10 @@ h2 {
         background-image: none !important;
         display: none;
     }
+
+    .section-booking {
+        height: 110vh;
+    }
 }
 
 /* for small screens size from 425px wide and down */
@@ -966,6 +947,10 @@ h2 {
 
     #bartender-slideshow {
         display: block;
+    }
+
+    .section-booking {
+        height: 120vh;
     }
 }
 
