--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -14,17 +14,17 @@
             </div>
             <div class="col-md-6 col-md-offset-1">
               <div class="booking-form">
-                <form method="POST">
+                <form id="form" method="POST">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input class="form-control" type="text" name="name" required>
+                        <input class="form-control" type="text" name="name" id="name" required>
                         <span class="form-label">Name</span>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input class="form-control" type="email" name="email" required>
+                        <input class="form-control" type="email" name="email" id="email" required>
                         <span class="form-label">Email</span>
                       </div>
                     </div>
@@ -32,13 +32,13 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input class="form-control" type="tel" name="phone" required>
+                        <input class="form-control" type="tel" name="phone" id="phone" required>
                         <span class="form-label">Phone</span>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input class="form-control" type="date" name="date" required>
+                        <input class="form-control" type="date" name="date" id="date" required>
                         <span class="form-label">Date</span>
                       </div>
                     </div>
@@ -47,7 +47,7 @@
                     <div class="col-md-6">
                       <div class="form-group">
                       <span class="form-label">No. of People</span>
-                          <select class="form-control" required>
+                          <select class="form-control" id="people" required>
                             <option>1 Person</option>
                             <option>2 People</option>
                             <option>3 People</option>
@@ -65,7 +65,7 @@
                     <div class="col-md-6">
                       <div class="form-group">
                         <span class="form-label">Class Time</span>
-                          <select class="form-control" required>
+                          <select class="form-control" id="time" required>
                             <option>13:00</option>
                             <option>15:00</option>
                             <option>17:00</option>
@@ -78,7 +78,8 @@
                     <p class="text-center"><strong>Note: </strong>Classes are 2 hours long and start from 13:00. Last class is at 21:00</p>
                   </div>
                   <div class="form-btn">
-                    <button class="submit-btn"><a style="text-decoration: none; color: white;" href="{{ url_for('booking_confirmed') }}">Book Now</a></button>
+                    <button id="submit" class="submit-btn">Book Now</button>
+                    <!-- <button class="submit-btn"><a style="text-decoration: none; color: white;" href="{{ url_for('booking_confirmed') }}">Book Now</a></button> -->
                   </div>
                   <br>
                   <div>
